<resources>
    <string name="app_name">MOB21 Firebase</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="insert">Insert</string>
    <string name="created_at">Created At</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_a_account">Already have a account ?</string>
    <string name="register">Register</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="image">Image</string>
    <string name="edit_profile_pic">Edit Profile Pic</string>
    <string name="outh_client">1025520542493-be1k0offt7kskl9g550k4cvp886ut8nj.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="textview">TextView</string>
</resources>