<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <ImageButton
        android:id="@+id/ibLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:src="@drawable/ic_logout"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/logout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_person"/>

            <ImageView
                android:id="@+id/icEditProfile"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_add"
                android:layout_gravity="end"
                android:contentDescription="@string/edit_profile_pic"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>