<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDesc"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCreatedAt"
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/created_at" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/delete"/>
    </FrameLayout>

</androidx.cardview.widget.CardView>